@@ -1,12 +1,12 @@
 Package: lme4
-Version: 0.96-1
-Date: 2005-06-08
+Version: 0.97-1
+Date: 2005-07-13
 Title: Linear mixed-effects models using S4 classes
 Author: Douglas Bates <bates@stat.wisc.edu> and
 	Deepayan Sarkar <deepayan@stat.wisc.edu>
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
 Description: Fit linear and generalized linear mixed-effects models.
-Depends: methods, R(>= 2.1.0), Matrix(>= 0.96-1), lattice
+Depends: methods, R(>= 2.1.0), Matrix(>= 0.97-4), lattice
 Imports: graphics, stats
 Suggests: mlmRev, latticeExtra
 SaveImage: no
